force-app/main/default/objects/clofor_com_cfs__PayslipACBal__c/fields/clofor_com_cfs__AccountedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountedDate__c</fullName>
    <formula>clofor_com_cfs__PayslipID__r.clofor_com_cfs__AccountedDate__c</formula>
    <label>ACCOUNTED DATE</label>
    <type>Date</type>
</CustomField>