force-app/main/default/objects/clofor_com_cfs__PayslipACBal__c/fields/clofor_com_cfs__EmployeeNetTakenHomeFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmployeeNetTakenHomeFormu__c</fullName>
    <formula>clofor_com_cfs__PayslipID__r.clofor_com_cfs__EmployeeNetTakenHome__c</formula>
    <label>EMPLOYEE NET TAKEN HOME-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>